# heaven-web

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose-local.yaml  compose-prod.yaml  compose.yaml  diesel.toml
backend/: .env.example  Cargo.toml  Dockerfile  diesel.toml
backend/src/: main.rs  test.rs
backend/src/apps/blog/: forms.rs  handlers.rs  insertables.rs  messages.rs  mod.rs  responses.rs  test.rs
backend/src/apps/users/: forms.rs  handlers.rs  messages.rs  mod.rs  responses.rs  test.rs
backend/src/config/: mod.rs
backend/src/db/: models.rs  schema.rs
backend/src/middlewares/: auth.rs  logging.rs
backend/src/shared/: errors.rs  mod.rs  statics.rs  utils.rs
frontend/: Cargo.toml  Dockerfile  README.md  Trunk.toml  Trunk.toml.docker  index.html  index.scss  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/.cargo/: .config.toml
frontend/src/: App.vue  app.rs  main.rs  main.ts  models.rs  router.rs  router.ts  style.css
frontend/src/app/: App.vue  markdown.css  mod.rs  router.ts  style.css
frontend/src/app/blog/: editor.rs  index.rs  input.rs  mod.rs  post.rs
frontend/src/components/: DeleteButton.vue  LoginForm.vue  Navbar.vue  PostList.vue  SmallModal.vue  TagBadge.vue  TagList.vue  delete_button.rs  mod.rs  navbar.rs  post_list.rs  small_modal.rs  tag_list.rs  user_context_provider.rs
frontend/src/config/: mod.rs
frontend/src/entities/post/: index.ts
frontend/src/entities/tag/: index.ts
frontend/src/entities/user/: index.ts
frontend/src/hooks/: use_user_context.rs
frontend/src/pages/: Drafts.vue  Editor.vue  Home.vue  NotFound.vue  Post.vue
frontend/src/pages/blog-home/: Home.vue  index.ts
frontend/src/pages/drafts/: Drafts.vue  index.ts
frontend/src/pages/editor/: index.ts
frontend/src/pages/home/: Home.vue  index.ts
frontend/src/pages/post-detail/: index.ts
frontend/src/router/: index.ts
frontend/src/services/: requests.rs
frontend/src/shared/: mod.rs  models.ts  statics.rs  store.ts  utils.rs  utils.ts
frontend/src/shared/api/: index.ts
frontend/src/shared/lib/: index.ts
frontend/src/views/: DraftsView.vue  EditorView.vue  HomeView.vue  PostView.vue
frontend/src/views/blog/: index.rs  post.rs
frontend/src/widgets/: DeleteButton.vue  LoginForm.vue  Navbar.vue  PostList.vue  SmallModal.vue  TagList.vue
frontend/src/widgets/header/: Header.vue  Sidebar.vue
frontend/src/widgets/login-form/: index.ts
frontend/templates/: 403.html  404.html  base.html  drafts.html  index.html  post.html  post_form.html
(+52 files in other folders)
