[package]
name = "heaven-web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-cors = "0.7.0"
actix-web = "4.9.0"
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.7", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
lazy_static = "1.5.0"
ring = "0.17.11"
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
uuid = "1.15.0"
